# sndchprev-linux

./: CMakeLists.txt  README.md  main.c
cmake/: CheckFunctionExists.cmake  CheckLibraryExists.cmake  FindCairo.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake
